--- a/arch/arm64/configs/kali_axonmini_defconfig
+++ b/arch/arm64/configs/kali_axonmini_defconfig
@@ -34,7 +34,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="kali"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -199,7 +199,7 @@ CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-# CONFIG_MODVERSIONS is not set
+CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
 CONFIG_STOP_MACHINE=y
@@ -235,7 +235,7 @@ CONFIG_BLOCK_COMPAT=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=m
+CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
@@ -850,9 +850,9 @@ CONFIG_BT_HCIUART=y
 # CONFIG_BT_HCIUART_LL is not set
 # CONFIG_BT_HCIUART_3WIRE is not set
 # CONFIG_BT_HCIUART_IBS is not set
-CONFIG_BT_HCIBCM203X=m
-CONFIG_BT_HCIBPA10X=m
-CONFIG_BT_HCIBFUSB=m
+CONFIG_BT_HCIBCM203X=y
+CONFIG_BT_HCIBPA10X=y
+CONFIG_BT_HCIBFUSB=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 # CONFIG_BT_ATH3K is not set
@@ -1432,9 +1432,9 @@ CONFIG_USB_NET_ZAURUS=y
 CONFIG_WLAN=y
 # CONFIG_LIBERTAS_THINFIRM is not set
 # CONFIG_ATMEL is not set
-CONFIG_AT76C50X_USB=m
+CONFIG_AT76C50X_USB=y
 # CONFIG_PRISM54 is not set
-CONFIG_USB_ZD1201=m
+CONFIG_USB_ZD1201=y
 CONFIG_USB_NET_RNDIS_WLAN=y
 # CONFIG_RTL8180 is not set
 CONFIG_RTL8187=y
@@ -1542,7 +1542,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+CONFIG_INPUT_EVBUG=y
 # CONFIG_INPUT_KEYRESET is not set
 # CONFIG_INPUT_KEYCOMBO is not set
 CONFIG_HALL_SENSOR=y
@@ -1699,7 +1699,7 @@ CONFIG_SENSORS_LIS3DH=y
 # CONFIG_INPUT_YEALINK is not set
 # CONFIG_INPUT_CM109 is not set
 CONFIG_INPUT_UINPUT=y
-CONFIG_INPUT_GPIO=m
+CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_ISA1200_FF_MEMLESS is not set
 # CONFIG_INPUT_PCF8574 is not set
 # CONFIG_INPUT_PWM_BEEPER is not set
@@ -1906,7 +1906,7 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
@@ -2352,7 +2352,7 @@ CONFIG_MEDIA_USB_SUPPORT=y
 #
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
-CONFIG_USB_GSPCA=m
+CONFIG_USB_GSPCA=y
 # CONFIG_USB_M5602 is not set
 # CONFIG_USB_STV06XX is not set
 # CONFIG_USB_GL860 is not set
@@ -2415,16 +2415,16 @@ CONFIG_USB_GSPCA=m
 # Digital TV USB devices
 #
 CONFIG_DVB_USB_V2=y
-CONFIG_DVB_USB_AF9015=m
-CONFIG_DVB_USB_AF9035=m
-CONFIG_DVB_USB_ANYSEE=m
-CONFIG_DVB_USB_AU6610=m
-CONFIG_DVB_USB_AZ6007=m
-CONFIG_DVB_USB_CE6230=m
-CONFIG_DVB_USB_EC168=m
-CONFIG_DVB_USB_GL861=m
-CONFIG_DVB_USB_IT913X=m
-CONFIG_DVB_USB_MXL111SF=m
+CONFIG_DVB_USB_AF9015=y
+CONFIG_DVB_USB_AF9035=y
+CONFIG_DVB_USB_ANYSEE=y
+CONFIG_DVB_USB_AU6610=y
+CONFIG_DVB_USB_AZ6007=y
+CONFIG_DVB_USB_CE6230=y
+CONFIG_DVB_USB_EC168=y
+CONFIG_DVB_USB_GL861=y
+CONFIG_DVB_USB_IT913X=y
+CONFIG_DVB_USB_MXL111SF=y
 CONFIG_DVB_USB_RTL28XXU=y
 # CONFIG_DVB_TTUSB_BUDGET is not set
 # CONFIG_DVB_TTUSB_DEC is not set
@@ -2510,10 +2510,10 @@ CONFIG_RADIO_ADAPTERS=y
 #
 # CONFIG_RADIO_WL128X is not set
 CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=m
+CONFIG_RADIO_IRIS_TRANSPORT=y
 # CONFIG_RADIO_SILABS is not set
-CONFIG_VIDEO_TVEEPROM=m
-CONFIG_CYPRESS_FIRMWARE=m
+CONFIG_VIDEO_TVEEPROM=y
+CONFIG_CYPRESS_FIRMWARE=y
 
 #
 # Media ancillary drivers (tuners, sensors, i2c, frontends)
@@ -2570,23 +2570,23 @@ CONFIG_MEDIA_TUNER_TEA5761=y
 CONFIG_MEDIA_TUNER_TEA5767=y
 CONFIG_MEDIA_TUNER_MT20XX=y
 CONFIG_MEDIA_TUNER_MT2060=y
-CONFIG_MEDIA_TUNER_MT2063=m
+CONFIG_MEDIA_TUNER_MT2063=y
 CONFIG_MEDIA_TUNER_QT1010=y
 CONFIG_MEDIA_TUNER_XC2028=y
 CONFIG_MEDIA_TUNER_XC5000=y
 CONFIG_MEDIA_TUNER_XC4000=y
 CONFIG_MEDIA_TUNER_MXL5005S=y
-CONFIG_MEDIA_TUNER_MXL5007T=m
+CONFIG_MEDIA_TUNER_MXL5007T=y
 CONFIG_MEDIA_TUNER_MC44S803=y
-CONFIG_MEDIA_TUNER_TDA18218=m
-CONFIG_MEDIA_TUNER_FC0011=m
+CONFIG_MEDIA_TUNER_TDA18218=y
+CONFIG_MEDIA_TUNER_FC0011=y
 CONFIG_MEDIA_TUNER_FC0012=y
 CONFIG_MEDIA_TUNER_FC0013=y
-CONFIG_MEDIA_TUNER_TDA18212=m
+CONFIG_MEDIA_TUNER_TDA18212=y
 CONFIG_MEDIA_TUNER_E4000=y
 CONFIG_MEDIA_TUNER_FC2580=y
-CONFIG_MEDIA_TUNER_TUA9001=m
-CONFIG_MEDIA_TUNER_IT913X=m
+CONFIG_MEDIA_TUNER_TUA9001=y
+CONFIG_MEDIA_TUNER_IT913X=y
 CONFIG_MEDIA_TUNER_R820T=y
 
 #
@@ -2596,36 +2596,36 @@ CONFIG_MEDIA_TUNER_R820T=y
 #
 # Multistandard (cable + terrestrial) frontends
 #
-CONFIG_DVB_DRXK=m
+CONFIG_DVB_DRXK=y
 
 #
 # DVB-S (satellite) frontends
 #
-CONFIG_DVB_STV6110=m
-CONFIG_DVB_STV0900=m
-CONFIG_DVB_CX24116=m
+CONFIG_DVB_STV6110=y
+CONFIG_DVB_STV0900=y
+CONFIG_DVB_CX24116=y
 
 #
 # DVB-T (terrestrial) frontends
 #
-CONFIG_DVB_MT352=m
-CONFIG_DVB_ZL10353=m
-CONFIG_DVB_AF9013=m
-CONFIG_DVB_EC100=m
-CONFIG_DVB_CXD2820R=m
+CONFIG_DVB_MT352=y
+CONFIG_DVB_ZL10353=y
+CONFIG_DVB_AF9013=y
+CONFIG_DVB_EC100=y
+CONFIG_DVB_CXD2820R=y
 CONFIG_DVB_RTL2830=y
 CONFIG_DVB_RTL2832=y
 
 #
 # DVB-C (cable) frontends
 #
-CONFIG_DVB_TDA10023=m
+CONFIG_DVB_TDA10023=y
 
 #
 # ATSC (North American/Korean Terrestrial/Cable DTV) frontends
 #
-CONFIG_DVB_LGDT3305=m
-CONFIG_DVB_LG2160=m
+CONFIG_DVB_LGDT3305=y
+CONFIG_DVB_LG2160=y
 
 #
 # ISDB-T (terrestrial) frontends
@@ -2634,14 +2634,14 @@ CONFIG_DVB_LG2160=m
 #
 # Digital terrestrial only tuners/PLL
 #
-CONFIG_DVB_PLL=m
+CONFIG_DVB_PLL=y
 
 #
 # SEC control devices for DVB-S
 #
-CONFIG_DVB_ISL6423=m
-CONFIG_DVB_IT913X_FE=m
-CONFIG_DVB_AF9033=m
+CONFIG_DVB_ISL6423=y
+CONFIG_DVB_IT913X_FE=y
+CONFIG_DVB_AF9033=y
 
 #
 # Tools to develop new frontends
@@ -3266,8 +3266,8 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=m
-CONFIG_MMC_BLOCK_TEST=m
+CONFIG_MMC_TEST=y
+CONFIG_MMC_BLOCK_TEST=y
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -3634,9 +3634,9 @@ CONFIG_NET_VENDOR_SILICOM=y
 # CONFIG_CED1401 is not set
 # CONFIG_DGRP is not set
 
-# 
+#
 # Qualcomm Atheros Prima WLAN module
-# 
+#
 # CONFIG_PRIMA_WLAN is not set
 CONFIG_PRONTO_WLAN=m
 # CONFIG_PRIMA_WLAN_BTAMP is not set
@@ -3842,9 +3842,7 @@ CONFIG_ARM_GIC=y
 CONFIG_MSM_SHOW_RESUME_IRQ=y
 CONFIG_MSM_IRQ=y
 # CONFIG_IPACK_BUS is not set
-CONFIG_MOBICORE_SUPPORT=m
-# CONFIG_MOBICORE_DEBUG is not set
-CONFIG_MOBICORE_API=m
+# CONFIG_MOBICORE_SUPPORT is not set
 # CONFIG_RESET_CONTROLLER is not set
 # CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
@@ -4273,7 +4271,7 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
-CONFIG_CRYPTO_RNG=m
+CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
@@ -4364,7 +4362,7 @@ CONFIG_CRYPTO_DEFLATE=y
 #
 # Random Number Generation
 #
-CONFIG_CRYPTO_ANSI_CPRNG=m
+CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
